<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="settings">Settings</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="ms">m/s</string>
    <string name="mh">m/h</string>
    <string name="mb">mb</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="alerts">Alerts</string>
    <string name="my_favourites">Favourites</string>
    <string name="map">Map</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="NoConnection">No Internet Connection</string>
    <string name="Error">Error</string>
    <string name="cont">Continue</string>
    <string name="AlarmSetting">Alarm Setting</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="future">Please Select Time In The Future.</string>
    <string name="permission">Permission is denied.</string>
    <string name="cityName" />
    <string name="duration" />
    <string name="type" />
    <string name="cancel">Cancel</string>
    <string name="deleteAlert">Delete Alert</string>
    <string name="deleteAlertMSG">Are you sure you want to delete this alert?</string>
    <string name="deleteLocation">Delete Location</string>
    <string name="deleteLocationMSG">Are you sure you want to delete this location from your favourites?</string>
</resources>